--- a/client/public/style.css
+++ b/client/public/style.css
@@ -6,3 +6,65 @@
     margin-right: 5px;
 }
 
+.food-img {
+    height: 3rem;
+    widows: 3rem;
+}
+
+.dashboard__container {
+    display: flex;
+    flex-direction: row;
+    margin-left: -1rem;
+    margin-right: 1rem;
+}
+
+.profile__container {
+    margin-left: 2rem;
+    margin-right: 2rem;
+    width: 25%;
+}
+
+.profile-body__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.schedule__container {
+    width: 100%;
+    margin-right: 1rem;
+}
+
+.schedule-heading__container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.schedule-body__container {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.day__container {
+    width: 25%;
+    margin: 1rem;
+}
+
+.day-body__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.meal-item {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+}
+
